--- a/index.html
+++ b/index.html
@@ -43,11 +43,43 @@
     </nav>
     <!-- Navbar end -->
 
-    <!-- Boostrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <!-- Bootstrap end-->
+    <div class="container">
+        <!-- Header section -->
+        <div class="row m-3">
+            <!-- Hero img -->
+            <div class="col-12 col-lg-6  p-5 text-center bg-hero-img rounded-start-3 rounded-end-3">
+                <div class="d-flex justify-content-center align-items-center h-100">
+                    <div class="text-white">
+                        <h1 class="m-3">Henry Ford
+                        </h1>
+                    </div>
+                </div>
+            </div>
+            <!-- Hero img end -->
+            <!-- Discription -->
+            <div
+                class="col-12 my-3 my-lg-0 p-3 border text-center col-lg-6 rounded-end-3 rounded-start-3 bg-dark-subtle">
+                <p class="mb-3 header">
+                    Henry Ford was an American industrialist and founder of the Ford Motor Company,
+                    revolutionizing the automotive industry by introducing assembly line production
+                    techniques and making automobiles affordable for the masses. His innovations 
+                    profoundly influenced modern manufacturing and transportation. Ford's visionary 
+                    approach not only transformed the way cars were manufactured but also played a pivotal
+                    role in shaping the landscape of American society, contributing to the widespread accessibility
+                    of personal transportation and fostering a new era of mobility and economic growth.
+                </p>
+            </div>
+            <!-- Discription ends -->
+        </div>
+
+
+        <!-- Header section end -->
+
+        <!-- Boostrap-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+        <!-- Bootstrap end-->
 </body>
 
 </html>
