--- a/index.html
+++ b/index.html
@@ -2,84 +2,104 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Henry Ford autobiographical</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Henry Ford autobiographical</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Kaushan+Script&display=swap" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+  crossorigin="anonymous">
+
 </head>
 
 <body>
-    <!-- Navbar start -->
-    <!-- Navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand link hover-6" href="index.html">Henery Ford autobiographical</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav ms-auto">
+  <!-- Navbar start -->
+  <!-- Navbar start -->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand link hover-6" href="index.html">Henery Ford autobiographical</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <ul class="navbar-nav ms-auto">
 
-                <div class="nav-item">
-                    <a class="nav-link link me-auto hover-6 d-block" href="tourist.html">Early Years</a>
+        <div class="nav-item">
+          <a class="nav-link link me-auto hover-6 d-block" href="tourist.html">Early Years</a>
 
-                </div>
-                <div class="nav-item">
-                    <a class="nav-link link me-auto hover-6 d-block" href="history.html">Major Accomplishments</a>
-
-                </div>
-                <div class="nav-item">
-                    <a class="nav-link link me-auto hover-6 d-block" href="history.html">Triumphs</a>
-
-                </div>
-
-
-
-            </ul>
         </div>
-    </nav>
-    <!-- Navbar end -->
+        <div class="nav-item">
+          <a class="nav-link link me-auto hover-6 d-block" href="history.html">Major Accomplishments</a>
 
-    <div class="container">
-        <!-- Header section -->
-        <div class="row m-3">
-            <!-- Hero img -->
-            <div class="col-12 col-lg-6  p-5 text-center bg-hero-img rounded-start-3 rounded-end-3">
-                <div class="d-flex justify-content-center align-items-center h-100">
-                    <div class="text-white">
-                        <h1 class="m-3">Henry Ford
-                        </h1>
-                    </div>
-                </div>
-            </div>
-            <!-- Hero img end -->
-            <!-- Discription -->
-            <div
-                class="col-12 my-3 my-lg-0 p-3 border text-center col-lg-6 rounded-end-3 rounded-start-3 bg-dark-subtle">
-                <p class="mb-3 header">
-                    Henry Ford was an American industrialist and founder of the Ford Motor Company,
-                    revolutionizing the automotive industry by introducing assembly line production
-                    techniques and making automobiles affordable for the masses. His innovations 
-                    profoundly influenced modern manufacturing and transportation. Ford's visionary 
-                    approach not only transformed the way cars were manufactured but also played a pivotal
-                    role in shaping the landscape of American society, contributing to the widespread accessibility
-                    of personal transportation and fostering a new era of mobility and economic growth.
-                </p>
-            </div>
-            <!-- Discription ends -->
+        </div>
+        <div class="nav-item">
+          <a class="nav-link link me-auto hover-6 d-block" href="history.html">Triumphs</a>
+
         </div>
 
 
-        <!-- Header section end -->
 
-        <!-- Boostrap-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-        <!-- Bootstrap end-->
+      </ul>
+    </div>
+  </nav>
+  <!-- Navbar end -->
+
+  <!--Carousel-->
+
+  <h1 class="cooltext">Henry Ford</h1>
+
+  <div id="carouselExampleIndicators" class="carousel slide img1 carousel-fade">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img id="img1" src="henry-ford1_2161x1440.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img id="img1" src="Model-T-1909_2161x1440.webp" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img id="img1" src="ford_2161x1440.webp" class="d-block w-100" alt="">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!--Carousel end-->
+
+  <!--Cards-->
+
+
+
+
+
+
+
+  <!-- Boostrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <!-- Bootstrap end-->
 </body>
 
 </html>
