Added reponsive cards and changed font

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navbar start -->
   <!-- Navbar start -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand link hover-6" href="index.html">Henery Ford autobiographical</a>
+    <a class="navbar-brand link hover-6 cooltext" href="index.html">Henery Ford autobiographical</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -30,15 +30,16 @@
       <ul class="navbar-nav ms-auto">
 
         <div class="nav-item">
-          <a class="nav-link link me-auto hover-6 d-block" href="tourist.html">Early Years</a>
+          <a class="nav-link link me-auto hover-6 d-block cooltext" href="#EarlyYears">Early Years</a>
 
         </div>
         <div class="nav-item">
-          <a class="nav-link link me-auto hover-6 d-block" href="history.html">Major Accomplishments</a>
+          <a class="nav-link link me-auto hover-6 d-block cooltext" href="#MajorAccomplishments">Major Accomplishments</a>
 
         </div>
+        <div class="nav-item" style="margin-right: 20px;">
         <div class="nav-item">
-          <a class="nav-link link me-auto hover-6 d-block" href="history.html">Triumphs</a>
+          <a class="nav-link link me-auto hover-6 d-block cooltext" href="#Triumphs">Triumphs</a>
 
         </div>
 
@@ -88,6 +89,79 @@
   <!--Carousel end-->
 
   <!--Cards-->
+
+
+  <b class="h1 cooltext" id="EarlyYears">Early Years</b>
+
+  <div class="container">
+    <div class="card ">
+      <img src="earlyyears_1_480x360.jpg" alt="">
+      <div class="card-content">
+        <h2>Early Years</h2>
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
+        </p>
+      </div>
+    </div>
+
+    <div class="card ">
+      <img src="fordfamily.jpg" alt="">
+      <div class="card-content">
+        <h2>Family Life</h2>
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm, sparking a fascination with mechanics. After stints as an engineer, he founded the Ford Motor Company in 1903. Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the beginning of his transformative impact on the automotive industry.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <b class="h1 cooltext" id="MajorAccomplishments">Major Accomplishments</b>
+
+  <div class="container">
+    <div class="card ">
+      <img src="earlyyears_1_480x360.jpg" alt="">
+      <div class="card-content">
+        <h2>Early Years</h2>
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
+        </p>
+      </div>
+    </div>
+
+    <div class="card ">
+      <img src="fordfamily.jpg" alt="">
+      <div class="card-content">
+        <h2>Family Life</h2>
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm, sparking a fascination with mechanics. After stints as an engineer, he founded the Ford Motor Company in 1903. Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the beginning of his transformative impact on the automotive industry.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <b class="h1 cooltext" id="Triumphs">Triumphs</b>
+
+  <div class="container">
+    <div class="card ">
+      <img src="earlyyears_1_480x360.jpg" alt="">
+      <div class="card-content">
+        <h2>Early Years</h2>
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
+        </p>
+      </div>
+    </div>
+
+    <div class="card ">
+      <img src="fordfamily.jpg" alt="">
+      <div class="card-content">
+        <h2>Family Life</h2>
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm, sparking a fascination with mechanics. After stints as an engineer, he founded the Ford Motor Company in 1903. Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the beginning of his transformative impact on the automotive industry.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  
+
+  
+
+  
 
 
 
