--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 
   <div class="container">
     <div class="card ">
-      <img src="earlyyears_1_480x360.jpg" alt="">
+      <img src="asb1013line11_480x360.jpg" alt="">
       <div class="card-content">
         <h2>Early Years</h2>
-        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
+        <p>-Henry Ford's major accomplishment was revolutionizing manufacturing with the introduction of the assembly line in 1913, dramatically increasing production efficiency and making automobiles affordable for the average person. This innovation not only transformed the automotive industry but also had a profound impact on modern industrial processes worldwide.
         </p>
       </div>
     </div>
