Added drop shadow

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Kaushan+Script&display=swap" rel="stylesheet">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-  crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 </head>
 
@@ -34,14 +34,15 @@
 
         </div>
         <div class="nav-item">
-          <a class="nav-link link me-auto hover-6 d-block cooltext" href="#MajorAccomplishments">Major Accomplishments</a>
+          <a class="nav-link link me-auto hover-6 d-block cooltext" href="#MajorAccomplishments">Major
+            Accomplishments</a>
 
         </div>
         <div class="nav-item" style="margin-right: 20px;">
-        <div class="nav-item">
-          <a class="nav-link link me-auto hover-6 d-block cooltext" href="#Triumphs">Triumphs</a>
+          <div class="nav-item">
+            <a class="nav-link link me-auto hover-6 d-block cooltext" href="#Triumphs">Triumphs</a>
 
-        </div>
+          </div>
 
 
 
@@ -98,7 +99,9 @@
       <img src="earlyyears_1_480x360.jpg" alt="">
       <div class="card-content">
         <h2>Early Years</h2>
-        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early
+          interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company
+          in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
         </p>
       </div>
     </div>
@@ -107,7 +110,10 @@
       <img src="fordfamily.jpg" alt="">
       <div class="card-content">
         <h2>Family Life</h2>
-        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm, sparking a fascination with mechanics. After stints as an engineer, he founded the Ford Motor Company in 1903. Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the beginning of his transformative impact on the automotive industry.
+        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm,
+          sparking a fascination with mechanics. After stints as an engineer, he founded the Ford Motor Company in 1903.
+          Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the
+          beginning of his transformative impact on the automotive industry.
         </p>
       </div>
     </div>
@@ -119,17 +125,20 @@
     <div class="card ">
       <img src="asb1013line11_480x360.jpg" alt="">
       <div class="card-content">
-        <h2>Early Years</h2>
-        <p>-Henry Ford's major accomplishment was revolutionizing manufacturing with the introduction of the assembly line in 1913, dramatically increasing production efficiency and making automobiles affordable for the average person. This innovation not only transformed the automotive industry but also had a profound impact on modern industrial processes worldwide.
+        <h2>Assembly Line</h2>
+        <p>-Henry Ford's major accomplishment was revolutionizing manufacturing with the introduction of the assembly
+          line in 1913, dramatically increasing production efficiency and making automobiles affordable for the average
+          person. This innovation not only transformed the automotive industry but also had a profound impact on modern
+          industrial processes worldwide.
         </p>
       </div>
     </div>
 
     <div class="card ">
-      <img src="fordfamily.jpg" alt="">
+      <img src="henry-ford-gettyimages-3230625_480x360.jpg" alt="">
       <div class="card-content">
-        <h2>Family Life</h2>
-        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm, sparking a fascination with mechanics. After stints as an engineer, he founded the Ford Motor Company in 1903. Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the beginning of his transformative impact on the automotive industry.
+        <h2>Impact on World</h2>
+        <p>-Henry Ford's impact on the world was monumental, as he pioneered mass production techniques, making automobiles accessible to millions and transforming transportation. His innovations not only revolutionized the automotive industry but also set the standard for modern manufacturing, shaping the course of 20th-century industrialization.
         </p>
       </div>
     </div>
@@ -141,8 +150,8 @@
     <div class="card ">
       <img src="earlyyears_1_480x360.jpg" alt="">
       <div class="card-content">
-        <h2>Early Years</h2>
-        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
+        <h2>Financial Stuggles</h2>
+        <p>-Henry Ford faced financial struggles early in his career, with two automotive ventures failing before the successful establishment of the Ford Motor Company in 1903. These setbacks fueled his determination, ultimately leading to transformative achievements in the automotive industry.
         </p>
       </div>
     </div>
@@ -150,18 +159,18 @@
     <div class="card ">
       <img src="fordfamily.jpg" alt="">
       <div class="card-content">
-        <h2>Family Life</h2>
-        <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm, sparking a fascination with mechanics. After stints as an engineer, he founded the Ford Motor Company in 1903. Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the beginning of his transformative impact on the automotive industry.
+        <h2>Legal Challenges</h2>
+        <p>-Henry Ford encountered resistance and legal challenges when he attempted to implement the five-dollar workday for his employees in 1914, facing criticism from other business leaders. Despite the initial hardships, this bold move ultimately improved productivity, reduced turnover, and set new standards for workers' compensation in the industrial world.
         </p>
       </div>
     </div>
   </div>
 
-  
 
-  
 
-  
+
+
+
 
 
 
