Final commit added button hovers and footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navbar start -->
   <!-- Navbar start -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand link hover-6 cooltext" href="index.html">Henery Ford autobiographical</a>
+    <a class="navbar-brand link hover-6 cooltext" href="#HenryFord">Henery Ford autobiographical</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
 
   <!--Carousel-->
 
-  <h1 class="cooltext">Henry Ford</h1>
+  <h1 class="cooltext" id="HenryFord">Henry Ford</h1>
 
   <div id="carouselExampleIndicators" class="carousel slide img1 carousel-fade">
     <div class="carousel-indicators">
@@ -67,13 +67,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img id="img1" src="henry-ford1_2161x1440.jpg" class="d-block w-100" alt="">
+        <img id="img1" src="imgs/henry-ford1_2161x1440.jpg" class="d-block w-100" alt="">
       </div>
       <div class="carousel-item">
-        <img id="img1" src="Model-T-1909_2161x1440.webp" class="d-block w-100" alt="">
+        <img id="img1" src="imgs/Model-T-1909_2161x1440.webp" class="d-block w-100" alt="">
       </div>
       <div class="carousel-item">
-        <img id="img1" src="ford_2161x1440.webp" class="d-block w-100" alt="">
+        <img id="img1" src="imgs/ford_2161x1440.webp" class="d-block w-100" alt="">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -96,18 +96,19 @@
 
   <div class="container">
     <div class="card ">
-      <img src="earlyyears_1_480x360.jpg" alt="">
+      <img src="imgs/earlyyears_1_480x360.jpg" alt="">
       <div class="card-content">
         <h2>Early Years</h2>
         <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford grew up on a farm and showed an early
-          interest in mechanics. He worked as an engineer for various companies before founding the Ford Motor Company
-          in 1903, setting the stage for his groundbreaking contributions to the automotive industry.
+          interest in mechanics. He worked as an engineer for various companies before founding the infamous Ford Motor Company
+          in 1903, setting the stage for his groundbreaking contributions to the automotive industry and society.
         </p>
+        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
 
     <div class="card ">
-      <img src="fordfamily.jpg" alt="">
+      <img src="imgs/fordfamily.jpg" alt="">
       <div class="card-content">
         <h2>Family Life</h2>
         <p>-Born on July 30, 1863, in Greenfield Township, Michigan, Henry Ford's early life unfolded on a farm,
@@ -115,6 +116,7 @@
           Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the
           beginning of his transformative impact on the automotive industry.
         </p>
+        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
   </div>
@@ -123,7 +125,7 @@
 
   <div class="container">
     <div class="card ">
-      <img src="asb1013line11_480x360.jpg" alt="">
+      <img src="imgs/asb1013line11_480x360.jpg" alt="">
       <div class="card-content">
         <h2>Assembly Line</h2>
         <p>-Henry Ford's major accomplishment was revolutionizing manufacturing with the introduction of the assembly
@@ -131,15 +133,17 @@
           person. This innovation not only transformed the automotive industry but also had a profound impact on modern
           industrial processes worldwide.
         </p>
+        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
 
     <div class="card ">
-      <img src="henry-ford-gettyimages-3230625_480x360.jpg" alt="">
+      <img src="imgs/henry-ford-gettyimages-3230625_480x360.jpg" alt="">
       <div class="card-content">
         <h2>Impact on World</h2>
         <p>-Henry Ford's impact on the world was monumental, as he pioneered mass production techniques, making automobiles accessible to millions and transforming transportation. His innovations not only revolutionized the automotive industry but also set the standard for modern manufacturing, shaping the course of 20th-century industrialization.
         </p>
+        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
   </div>
@@ -148,23 +152,59 @@
 
   <div class="container">
     <div class="card ">
-      <img src="earlyyears_1_480x360.jpg" alt="">
+      <img src="imgs/triumphs_480x360.jpg" alt="">
       <div class="card-content">
         <h2>Financial Stuggles</h2>
-        <p>-Henry Ford faced financial struggles early in his career, with two automotive ventures failing before the successful establishment of the Ford Motor Company in 1903. These setbacks fueled his determination, ultimately leading to transformative achievements in the automotive industry.
+        <p>-Henry Ford faced tons of financial struggles early in his career, with two automotive ventures failing before the successful establishment of the infamous Ford Motor Company in 1903. 
+          Undeterred by these setbacks, Ford's unwavering determination and innovative spirit ultimately led to transformative achievements in the automotive industry.
         </p>
+        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
 
     <div class="card ">
-      <img src="fordfamily.jpg" alt="">
+      <img src="imgs/ford_legal_480x360.jpg" alt="">
       <div class="card-content">
         <h2>Legal Challenges</h2>
         <p>-Henry Ford encountered resistance and legal challenges when he attempted to implement the five-dollar workday for his employees in 1914, facing criticism from other business leaders. Despite the initial hardships, this bold move ultimately improved productivity, reduced turnover, and set new standards for workers' compensation in the industrial world.
         </p>
+        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
   </div>
+
+  <!--Cards-->
+
+  <br>
+
+  <!--footer-->
+  <footer class="bg-dark text-center text-white footerstyle">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Github -->
+        <a
+          class="btn text-white btn-floating m-1 footerhover"
+          style="background-color: #333333;"
+          href="https://github.com/DanielB566" target="_blank"
+          role="button"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: #343a40;">
+      © 2023 Copyright:
+      <a class="text-white link-primary" a href="mailto:525dbootnik@frhsd.com">525dbootnik@frhsd.com</a> 
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!--footer-->
+  
 
 
 
