Final commit added links to buttons

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           Ford's pioneering spirit and the revolutionary assembly line techniques he introduced in 1913 marked the
           beginning of his transformative impact on the automotive industry.
         </p>
-        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
+        <a href="https://en.wikipedia.org/wiki/Henry_Ford" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
   </div>
@@ -133,7 +133,7 @@
           person. This innovation not only transformed the automotive industry but also had a profound impact on modern
           industrial processes worldwide.
         </p>
-        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
+        <a href="https://www.youtube.com/watch?v=qFbsDArAWj8" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
 
@@ -143,7 +143,7 @@
         <h2>Impact on World</h2>
         <p>-Henry Ford's impact on the world was monumental, as he pioneered mass production techniques, making automobiles accessible to millions and transforming transportation. His innovations not only revolutionized the automotive industry but also set the standard for modern manufacturing, shaping the course of 20th-century industrialization.
         </p>
-        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
+        <a href="https://www.autodesk.com/design-make/videos/henry-fords-manufacturing-innovations" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
   </div>
@@ -158,7 +158,7 @@
         <p>-Henry Ford faced tons of financial struggles early in his career, with two automotive ventures failing before the successful establishment of the infamous Ford Motor Company in 1903. 
           Undeterred by these setbacks, Ford's unwavering determination and innovative spirit ultimately led to transformative achievements in the automotive industry.
         </p>
-        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
+        <a href="https://fee.org/articles/henry-ford-and-the-triumph-of-the-auto-industry/" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
 
@@ -168,7 +168,7 @@
         <h2>Legal Challenges</h2>
         <p>-Henry Ford encountered resistance and legal challenges when he attempted to implement the five-dollar workday for his employees in 1914, facing criticism from other business leaders. Despite the initial hardships, this bold move ultimately improved productivity, reduced turnover, and set new standards for workers' compensation in the industrial world.
         </p>
-        <a href="https://corporate.ford.com/articles/history/henry-ford-biography.html" target="_blank" class="btn btn3">Learn More</a> 
+        <a href="https://fee.org/articles/henry-ford-and-the-triumph-of-the-auto-industry/" target="_blank" class="btn btn3">Learn More</a> 
       </div>
     </div>
   </div>
