Fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navbar start -->
   <!-- Navbar start -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand link hover-6 cooltext" href="#HenryFord">Henery Ford autobiographical</a>
+    <a class="navbar-brand link hover-6 cooltext" href="#HenryFord">Henry Ford autobiographical</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -154,7 +154,7 @@
     <div class="card ">
       <img src="imgs/triumphs_480x360.jpg" alt="">
       <div class="card-content">
-        <h2>Financial Stuggles</h2>
+        <h2>Financial Struggles</h2>
         <p>-Henry Ford faced tons of financial struggles early in his career, with two automotive ventures failing before the successful establishment of the infamous Ford Motor Company in 1903. 
           Undeterred by these setbacks, Ford's unwavering determination and innovative spirit ultimately led to transformative achievements in the automotive industry.
         </p>
